[package]
name = "cast"
version = "1.0.0"
edition = "2021"
default-run = "cast"

[dependencies]
crc32fast = "1.3"
num-format = "0.4"
num_cpus = "1.16"
xz2 = { version = "0.1", features = ["static"] }
memchr = "2.7"

brotli = "8.0"
zstd = { version = "0.13", features = ["zstdmt"] }
flate2 = "1.0"

[build-dependencies]
vcpkg = "0.2"

